Sutter Health/src/objects/S3_Deployment__c.object
<CustomObject>
    <description>planning for go-lives and implementation of sub parts of each Operational goal</description>
    <fields>
        <fullName>Business_Release__c</fullName>
        <label>Business Release</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Deployed__c</fullName>
        <label>Date Deployed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_First_Reported__c</fullName>
        <label>Date First Reported</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Reporting_Expected__c</fullName>
        <label>Date Reporting Expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deployment_Issue_Comments__c</fullName>
        <inlineHelpText>Provide detail information on the deployment issue</inlineHelpText>
        <label>Deployment Issue Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deployment_Issue__c</fullName>
        <inlineHelpText>Why is this region/entity not reporting on time?</inlineHelpText>
        <label>Deployment Issue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data Not Available</fullName>
                </value>
                <value>
                    <fullName>Data Does Not Exist</fullName>
                </value>
                <value>
                    <fullName>Delayed Deployment</fullName>
                </value>
                <value>
                    <fullName>Technology Unavailabe</fullName>
                </value>
                <value>
                    <fullName>Removed from Scope</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SCAH</fullName>
                </value>
                <value>
                    <fullName>SHCVR</fullName>
                </value>
                <value>
                    <fullName>SHEBR</fullName>
                </value>
                <value>
                    <fullName>SHP</fullName>
                </value>
                <value>
                    <fullName>SHPCR</fullName>
                </value>
                <value>
                    <fullName>SHSSR</fullName>
                </value>
                <value>
                    <fullName>SHWBR</fullName>
                </value>
                <value>
                    <fullName>SPS</fullName>
                </value>
                <value>
                    <fullName>S3</fullName>
                </value>
                <value>
                    <fullName>SHSO</fullName>
                </value>
                <value>
                    <fullName>SOPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <formula>TEXT (Metric_ID__r.Function__c) &amp; &quot;-&quot; &amp; Text( Metric_ID__r.Sub_Function__c )</formula>
        <label>Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_ID__c</fullName>
        <label>Metric ID</label>
        <referenceTo>S3_Ops__c</referenceTo>
        <relationshipLabel>S3 Deployments</relationshipLabel>
        <relationshipName>S3t_Metric_Relationship</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Out_of_Scope__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Removed from Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partial_Deployment__c</fullName>
        <label>Partial Deployment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>S3 Deployment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D{yy}{mm}{00}</displayFormat>
        <label>Deployment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S3 Deployments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BR_Assignment</fullName>
        <active>true</active>
        <description>Business Release Number must be between 1 and 13</description>
        <errorConditionFormula>OR( 
Business_Release__c &lt; 0, 
Business_Release__c &gt; 13.1)</errorConditionFormula>
        <errorMessage>Business Release Number must be between 1 and 13</errorMessage>
    </validationRules>
</CustomObject>